fix:aggiunto wrap ai link centrali

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ ul.links{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
+    
     width: 100%;
     height: 100%;
     list-style-type: none;
